<resources>
    <string name="app_name">Dlwr</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="Inicias">Inicia sesión</string>
    <string name="guardarDatos">Guardar datos</string>
    <string name="Registrate">Registrate</string>
    <string name="Ingresa">Ingresa</string>
    <string name="OlvideContra">Olvide mi contraseña</string>
</resources>