<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/f2">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#DFFFCC"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:paddingLeft="8dp"
            android:text="Nombre"
            android:textColor="#000000"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/NombreID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_person_24"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:drawablePadding="10dp"
            android:textColorHint="#1A4E07"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="228dp"
            android:fontFamily="@font/cambo"
            android:paddingLeft="8dp"
            android:text="Usuario"
            android:textColor="#000000"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/UsuarioID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_person_24"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:drawablePadding="10dp"
            android:textColorHint="#1A4E07"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="146dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gato2" />

    <Button
        android:id="@+id/IniciaID"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#1A4E07"
        android:fontFamily="@font/cambo"
        android:text="@string/Registrate"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresaID" />

    <Button
        android:id="@+id/IngresaID"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#1A4E07"
        android:fontFamily="@font/cambo"
        android:text="@string/Ingresa"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/OlvideContraID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#1A4E07"
        android:fontFamily="@font/cambo"
        android:text="@string/OlvideContra"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IniciaID"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aclonica"
        android:text="Login"
        android:textColor="#1A4E07"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
</androidx.constraintlayout.widget.ConstraintLayout>