<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/IniciaSesionID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f2"
    android:orientation="horizontal"
    android:theme="@style/Registro"
    tools:context=".Registro">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#E3FFD2"
        android:backgroundTint="#DFFFCC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.317">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:paddingLeft="8dp"
            android:text="Nombre"
            android:textColor="#000000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/NombreID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColorHint="#1A4E07"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:paddingLeft="8dp"
            android:text="Usuario"
            android:textColor="#000000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/UsuarioID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textColorHint="#1A4E07"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:paddingLeft="8dp"
            android:text="Contraseña"
            android:textColor="#000000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/ContraseñaID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColorHint="#1A4E07"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:paddingLeft="8dp"
            android:text="Email"
            android:textColor="#070000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/EmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#1A4E07"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:paddingLeft="8dp"
            android:text="Telefono"
            android:textColor="#000000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/PhoneID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_phone_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/cambo"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textColor="#1A4E07"
            android:textColorHint="#1A4E07"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambo"
            android:paddingLeft="8dp"
            android:text="Sexo"
            android:textColor="#000000"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cambo"
                    android:text="Femenino"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cambo"
                    android:text="Masculino"
                    android:textSize="20sp" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/InicioSesionID"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#1A4E07"
        android:fontFamily="@font/cambo"
        android:text="@string/Inicias"
        android:textSize="22sp"
        android:theme="@style/Theme.Dlwr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/GuardarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#1A4E07"
        android:fontFamily="@font/cambo"
        android:text="@string/guardarDatos"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InicioSesionID"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="116dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gato" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="Registro"
        android:textColor="#1A4E07"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>